Fixed Past History alignement

--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ input {
 }
 
 .past-history {
-  margin-top: 60px;/*Sandeep's changes*/
+  margin-top: 70px;/*Sandeep's changes*/
   width: 550px;
   height: 115px;
 }
